--- a/DatosAgrupados.html
+++ b/DatosAgrupados.html
@@ -3,22 +3,28 @@
 <head><meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-  .back-button {
-      padding: 10px 20px;
-      background-color: #007bff; /* Color de fondo */
-      color: #fff; /* Color del texto */
-      text-decoration: none; /* Quitar subrayado de enlace */
-      border: 1px solid #007bff; /* Borde del botón */
-      border-radius: 5px; /* Bordes redondeados */
-      font-size: 16px; /* Tamaño del texto */
-  }
-  
-  .back-button:hover {
-      background-color: #0056b3; /* Cambio de color al pasar el ratón */
-      border-color: #0056b3; /* Cambio de color del borde al pasar el ratón */
-  }
+.back-button {
+            position: fixed; /* Fija el botón en la ventana */
+            top: 20px; /* Distancia desde la parte superior */
+            left: 20px; /* Distancia desde la izquierda */
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #007bff; /* Color de fondo */
+            color: #fff; /* Color del texto */
+            text-decoration: none; /* Quitar subrayado de enlace */
+            border: 1px solid #007bff; /* Borde del botón */
+            border-radius: 5px; /* Bordes redondeados */
+            font-size: 16px; /* Tamaño del texto */
+            z-index: 1000; /* Capa sobre otros elementos */
+        }
+        
+        .back-button:hover {
+            background-color: #0056b3; /* Cambio de color al pasar el ratón */
+            border-color: #0056b3; /* Cambio de color del borde al pasar el ratón */
+        }
+
 </style>
-<a href="index.html" class="back-button">&lt;</a>
+<a href="index.html#n01" class="back-button">&lt;</a>
 <br>
 <style>
   body {
