--- a/Ejercicios_Tecnicas_De_Conteo.html
+++ b/Ejercicios_Tecnicas_De_Conteo.html
@@ -3,23 +3,28 @@
 <head><meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-  .back-button {
-      display: inline-block;
-      padding: 10px 20px;
-      background-color: #007bff; /* Color de fondo */
-      color: #fff; /* Color del texto */
-      text-decoration: none; /* Quitar subrayado de enlace */
-      border: 1px solid #007bff; /* Borde del botón */
-      border-radius: 5px; /* Bordes redondeados */
-      font-size: 16px; /* Tamaño del texto */
-  }
-  
-  .back-button:hover {
-      background-color: #0056b3; /* Cambio de color al pasar el ratón */
-      border-color: #0056b3; /* Cambio de color del borde al pasar el ratón */
-  }
+.back-button {
+            position: fixed; /* Fija el botón en la ventana */
+            top: 20px; /* Distancia desde la parte superior */
+            left: 20px; /* Distancia desde la izquierda */
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #007bff; /* Color de fondo */
+            color: #fff; /* Color del texto */
+            text-decoration: none; /* Quitar subrayado de enlace */
+            border: 1px solid #007bff; /* Borde del botón */
+            border-radius: 5px; /* Bordes redondeados */
+            font-size: 16px; /* Tamaño del texto */
+            z-index: 1000; /* Capa sobre otros elementos */
+        }
+        
+        .back-button:hover {
+            background-color: #0056b3; /* Cambio de color al pasar el ratón */
+            border-color: #0056b3; /* Cambio de color del borde al pasar el ratón */
+        }
+
 </style>
-<a href="index.html" class="back-button">&lt;</a>
+<a href="index.html#n02" class="back-button">&lt;</a>
 <br>
 <title>Ejercicios_Tecnicas_De_Conteo</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 
@@ -15277,6 +15282,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <div id=ex_09></div>  
 
+<p><a href="#Menu">[Menu]</a>   |   <a href="#ex_10">[Siguiente]</a></p>
 <hr />
 <p><span style="color: #2168ff; font-size: 23px; font-weight: 600;">Ejercicio 9</span></p>
 
@@ -15469,6 +15475,7 @@ Por tanto la cantidad de lineas telefónicas que pertenecen a la zona 326, son 1
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <div id=ex_10></div>  
 
+<p><a href="#Menu">[Menu]</a>   |   <a href="#ex_09">[Anterior]</a>   <a href="#ex_11">[Siguiente]</a></p>
 <hr />
 <p><span style="color: #2168ff; font-size: 23px; font-weight: 600;">Ejercicio 10</span><br />
 <em>Sólo para practicar.</em> Se tiene la palabra MURCIÉLAGO. Si no se permiten repeticiones al usar las letras que la forman, determina:</p>
@@ -15926,6 +15933,7 @@ $$</p>
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <div id=ex_11></div>  
 
+<p><a href="#Menu">[Menu]</a>   |   <a href="#ex_10">[Anterior]</a>   <a href="#ex_12">[Siguiente]</a></p>
 <hr />
 <p><span style="color: #2168ff; font-size: 23px; font-weight: 600;">Ejercicio 11</span><br />
 <em>Parque vehicular.</em> La Ciudad de México tiene placas de automóviles con tres números seguidos por tres letras, es decir, son placas del tipo 999-AAA. Sin embargo, no pueden empezar con 0 (cero) ni se utilizan las letras I, O, Q y Ñ.</p>
@@ -16138,6 +16146,7 @@ Entonces, la probabilidad de que una placa elegida al azar sea impar es de: <em>
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <div id=ex_12></div>  
 
+<p><a href="#Menu">[Menu]</a>   |   <a href="#ex_11">[Anterior]</a>   <a href="#ex_13">[Siguiente]</a></p>
 <hr />
 <p><span style="color: #2168ff; font-size: 23px; font-weight: 600;">Ejercicio 12</span><br />
 <em>Servicios restauranteros.</em> Una cadena de hamburguesas anuncia que se ofrecen 512 maneras de pedir una hamburguesa. Un cliente puede elegir cualquiera de estos ingredientes: cátsup, mostaza, mayonesa, aderezo de la casa, cebolla, pepinillos, jitomate, tocino y lechuga.</p>
@@ -16229,6 +16238,7 @@ Por lo tanto, la afirmación de la empresa es correcta, ya que el número total 
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <div id=ex_13></div>  
 
+<p><a href="#Menu">[Menu]</a>   |   <a href="#ex_12">[Anterior]</a>   <a href="#ex_14">[Siguiente]</a></p>
 <hr />
 <p><span style="color: #2168ff; font-size: 23px; font-weight: 600;">Ejercicio 13</span><br />
 <em>Cultura</em>. Una persona tiene un libro de cada uno de los autores siguientes: Mario Vargas Llosa, Alberto Ruy Sánchez, Gabriel García Márquez, Günther Grass, Patrick Süskind, Heinrich Böll, Arturo Pérez-Reverte y Camilo José Cela.<br />
@@ -16306,6 +16316,7 @@ $$</p>
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <div id=ex_14></div>  
 
+<p><a href="#Menu">[Menu]</a>   |   <a href="#ex_13">[Anterior]</a>   <a href="#ex_15">[Siguiente]</a></p>
 <hr />
 <p><span style="color: #2168ff; font-size: 23px; font-weight: 600;">Ejercicio 14</span><br />
 <em>Finanzas</em> Se va a formar un portafolio de inversión de cuatro instrumentos financieros a partir de cinco de renta fija y seis de renta variable. ¿De cuántas maneras podría formarse el portafolio si:<br />
@@ -16445,6 +16456,7 @@ $$ P(A) = \frac{\text{Número de resultados favorables}}{\text{Número total de 
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <div id=ex_15></div>  
 
+<p><a href="#Menu">[Menu]</a>   |   <a href="#ex_14">[Anterior]</a>   <a href="#ex_16">[Siguiente]</a></p>
 <hr />
 <p><span style="color: #2168ff; font-size: 23px; font-weight: 600;">Ejercicio 15</span><br />
 <em>Futbol.</em> Tres parejas (tres hombres y tres mujeres) compran boletos para ir a un partido de los Pumas. Cuando llegan al estadio de Ciudad Universitaria les surge la duda de cómo sentarse en la fila. ¿De cuántas maneras pueden hacerlo si:</p>
@@ -16781,6 +16793,7 @@ Probabilidad del evento del inciso (c): 0.06666666666666667
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <div id=ex_16></div>  
 
+<p><a href="#Menu">[Menu]</a>   |   <a href="#ex_15">[Anterior]</a>   <a href="#ex_17">[Siguiente]</a></p>
 <hr />
 <p><span style="color: #2168ff; font-size: 23px; font-weight: 600;">Ejercicio 16</span><br />
 <em>Trabajo en equipo.</em> En un grupo de 25 alumnos hay 13 chicas y 12 chicos. Se desean formar equipos de trabajo para realizar una investigación:</p>
@@ -17110,6 +17123,7 @@ Probabilidad del evento del inciso (c): 0.32298136645962733
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <div id=ex_17></div>  
 
+<p><a href="#Menu">[Menu]</a>   |   <a href="#ex_16">[Anterior]</a></p>
 <hr />
 <p><span style="color: #2168ff; font-size: 23px; font-weight: 600;">Ejercicio 17</span><br />
 <em>Control de calidad.</em> Se tiene una caja con 24 latas y se sabe que dos están contaminadas. Se van a seleccionar tres latas al azar para someterlas a una prueba de control de calidad, es decir, para medir los estándares de calidad de la empresa.</p>
