--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="datos">
         <h2>Datos Generales</h2>
         <p><strong>Nombre de la asignatura:</strong> Probabilidad y Estadística</p>
-        <p><strong>Fecha:</strong> 08/07/2024</p>
+        <p><strong><a href="app.dataquest.io/profile/230110358">Perfil</a></strong></p>
         <p><strong>TECNOLÓGICO NACIONAL DE MÉXICO</strong></p>
         <p><strong>INSTITUTO TECNOLÓGICO SUPERIOR DEL OCCIDENTE DEL ESTADO DE HIDALGO</strong></p>
     </div>
@@ -67,7 +67,7 @@
                     <span class="subtopic-number">[Nootebook] </span>Distribución de Frecuencias 
                 </span></button>
             -->
-                <a href="DatosAgrupados.html" style="padding: 0px;">
+                <a href="DatosAgrupados.html" style="padding: 0px;" id="n01">
                     <button class="subtopic" id="n"><span>
                         <span class="subtopic-number">[Nootebook] </span>Distribución de Frecuencias 
                     </span></button>
@@ -273,7 +273,7 @@
                         <span class="subtopic-number">[Nootebook] </span> Combinaciones y Permutaciones
                     </span></button>
                 -->
-                <a href="Ejercicios_Tecnicas_De_Conteo.html" style="padding: 0px;">
+                <a href="Ejercicios_Tecnicas_De_Conteo.html" style="padding: 0px;" id="n02">
                     <button class="subtopic" id="n"><span>
                         <span class="subtopic-number">[Nootebook] </span> Combinaciones y Permutaciones
                     </span></button>
