--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="datos">
         <h2>Datos Generales</h2>
         <p><strong>Nombre de la asignatura:</strong> Probabilidad y Estadística</p>
-        <p><strong><a href="app.dataquest.io/profile/230110358">Perfil</a></strong></p>
+        <a href="https://app.dataquest.io/profile/230110358"><p><strong>Edwin Salvador Soto Hernandez</strong></p></a>
         <p><strong>TECNOLÓGICO NACIONAL DE MÉXICO</strong></p>
         <p><strong>INSTITUTO TECNOLÓGICO SUPERIOR DEL OCCIDENTE DEL ESTADO DE HIDALGO</strong></p>
     </div>
